# openccu-data

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  NOTICE.md  README.md  changelog.md  pyproject.toml  requirements.txt  requirements_test.txt
.github/: dependabot.yml
.github/workflows/: pre-commit.yml  python-publish.yml  release-on-tag.yml  test-run.yaml
openccu_data/: __init__.py  const.py
openccu_data/data/: __init__.py
openccu_data/data/profiles/: _receiver_type_aliases.json
openccu_data/data/translation_custom/: channel_types_de.json  channel_types_en.json  device_models_de.json  device_models_en.json  parameter_values_de.json  parameter_values_en.json  parameters_de.json  parameters_en.json
openccu_data/easymodes/: __init__.py  extractor.py
openccu_data/profiles/: __init__.py  extractor.py
openccu_data/translations/: __init__.py  extractor.py
script/: bootstrap  extract_easymodes.py  extract_profiles.py  extract_translations.py  lint_translation_custom.py  run-in-env.sh  setup
tests/: bandit.yaml  test_easymodes_extractor.py
